force-app/main/default/objects/Placement__c/Placement__c.object-meta.xml
<CustomObject>
    <description>ECMv1 Job Placement Service Domain</description>
    <label>Send Out / Employment</label>
    <nameField>
        <label>Send Out / Employment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Send Outs / Employment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>