force-app/main/default/objects/Placement__c/fields/Advanced_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Interview_Date__c</fullName>
    <description>ECM Job Order Process for Cara</description>
    <label>Advanced Interview Date</label>
    <type>Date</type>
</CustomField>