force-app/main/default/objects/Placement__c/fields/Agency_Contract__c.field-meta.xml
<CustomField>
    <fullName>Agency_Contract__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>ECMv1 Job Placement Domain Template</description>
    <inlineHelpText>Determines what milestones are tracked for retention. Was: ECM Agency Contract.</inlineHelpText>
    <label>Retention Configuration</label>
    <referenceTo>Agency_Contract__c</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>