force-app/main/default/objects/Placement__c/fields/Application_Notes__c.field-meta.xml
<CustomField>
    <fullName>Application_Notes__c</fullName>
    <label>Application Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>