force-app/main/default/objects/Placement__c/fields/Approval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Start_Date__c</fullName>
    <formula>if (isnull (Approved_Date__c), Start_Date__c, Approved_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval/Start Date</label>
    <type>Date</type>
</CustomField>