force-app/main/default/objects/Placement__c/fields/Approved_by_IDS__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_IDS__c</fullName>
    <description>Field label changed on 8/17/18 as a result from help desk ticket (case) #5700.</description>
    <inlineHelpText>Field formerly labelled as &quot;Approved by IDS&quot;.</inlineHelpText>
    <label>IDS Consulted</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Yet Reviewed</fullName>
                <default>true</default>
                <label>Not Yet Reviewed</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>