force-app/main/default/objects/Placement__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>ECM job order field for TCP</description>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>