force-app/main/default/objects/Placement__c/fields/Approved_Date_Fiscal_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date_Fiscal_Quarter__c</fullName>
    <formula>if (month(Approved_Date__c) &lt;= 3, &quot;Q3&quot;,
if (month(Approved_Date__c) &lt;= 6, &quot;Q4&quot;,
if (month(Approved_Date__c) &lt;= 9, &quot;Q1&quot;,
if (month(Approved_Date__c) &lt;= 12, &quot;Q2&quot;,
&quot;Not Available&quot;))))</formula>
    <label>Approved Date Fiscal Quarter</label>
    <type>Text</type>
</CustomField>