force-app/main/default/objects/Placement__c/fields/Attrition_Rate__c.field-meta.xml
<CustomField>
    <fullName>Attrition_Rate__c</fullName>
    <formula>IF(
   NOT(ISBLANK(End_Date__c)),
   1,
   0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attrition Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>