force-app/main/default/objects/Placement__c/fields/CalculateMilestones__c.field-meta.xml
<CustomField>
    <fullName>CalculateMilestones__c</fullName>
    <formula>IF(!ISBLANK(TEXT(Job_Type__c))
&amp;&amp;  Is_Active__c = TRUE
&amp;&amp; CONTAINS(Milestone_Job_Types__c, TEXT(Job_Type__c)), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>CalculateMilestones</label>
    <type>Text</type>
</CustomField>