force-app/main/default/objects/Placement__c/fields/CAM__c.field-meta.xml
<CustomField>
    <fullName>CAM__c</fullName>
    <formula>Job_Placement_Owner__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM</label>
    <type>Text</type>
</CustomField>