force-app/main/default/objects/Placement__c/fields/CAM_Recommendation_for_Advancement__c.field-meta.xml
<CustomField>
    <fullName>CAM_Recommendation_for_Advancement__c</fullName>
    <inlineHelpText>Added in October 2018 as way for CAMs to indicate early support for a participants&apos; future viability for Advancement.</inlineHelpText>
    <label>CAM Recommendation for Advancement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>