force-app/main/default/objects/Placement__c/fields/Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Case_Record__c</fullName>
    <description>ECMv1 Job Placement Service Domain</description>
    <label>Case Record</label>
    <referenceTo>Case_Record__c</referenceTo>
    <relationshipName>Placements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>