force-app/main/default/objects/Placement__c/fields/CBOC_Organization__c.field-meta.xml
<CustomField>
    <fullName>CBOC_Organization__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CBOC Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Send Outs / Employment (CBOC Organization)</relationshipLabel>
    <relationshipName>Send_Outs_Employment</relationshipName>
    <type>Lookup</type>
</CustomField>