force-app/main/default/objects/Placement__c/fields/CBOC_Participant_Name__c.field-meta.xml
<CustomField>
    <fullName>CBOC_Participant_Name__c</fullName>
    <label>CBOC Participant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>