force-app/main/default/objects/Placement__c/fields/Certification_Category__c.field-meta.xml
<CustomField>
    <fullName>Certification_Category__c</fullName>
    <inlineHelpText>Which certification category was used?</inlineHelpText>
    <label>Certification Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OSHA</fullName>
            </value>
            <value>
                <fullName>Forklift</fullName>
            </value>
            <value>
                <fullName>Community Health Worker</fullName>
            </value>
            <value>
                <fullName>Carpentry</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Landscaping/Gardening (Horticulture)</fullName>
            </value>
            <value>
                <fullName>Construction Trade (i.e., electrical, plumbing, etc)</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Cybersecurity</fullName>
            </value>
            <value>
                <fullName>Project Management (planning/organizing projects for a team)</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Waste Water Sampling Coordinator</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>CDL</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>General IT</fullName>
            </value>
            <value>
                <fullName>Construction flagger</fullName>
            </value>
            <value>
                <fullName>HS Diploma/GED</fullName>
            </value>
            <value>
                <fullName>Other (please specify)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>