force-app/main/default/objects/Placement__c/fields/Certification_Category_Other__c.field-meta.xml
<CustomField>
    <fullName>Certification_Category_Other__c</fullName>
    <label>Certification Category (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>