force-app/main/default/objects/Placement__c/fields/Change_in_Salary__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Salary__c</fullName>
    <formula>Latest_Salary_TCP__c -  Starting_Salary_TCP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latest Salary (from latest Advancement) minus Starting Salary</inlineHelpText>
    <label>Change in Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>