force-app/main/default/objects/Placement__c/fields/Change_in_Wage__c.field-meta.xml
<CustomField>
    <fullName>Change_in_Wage__c</fullName>
    <formula>Latest_Wage_TCP__c  - Starting_Wage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latest Wage minus Starting Rate</inlineHelpText>
    <label>Change in Wage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>