force-app/main/default/objects/Placement__c/fields/Client_Household__c.field-meta.xml
<CustomField>
    <fullName>Client_Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Household</label>
    <referenceTo>Client_Household__c</referenceTo>
    <relationshipName>Placements</relationshipName>
    <type>Lookup</type>
</CustomField>