force-app/main/default/objects/Placement__c/fields/Closed_in_ETO__c.field-meta.xml
<CustomField>
    <fullName>Closed_in_ETO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed in ETO</label>
    <type>Checkbox</type>
</CustomField>