force-app/main/default/objects/Placement__c/fields/Connects_Margin__c.field-meta.xml
<CustomField>
    <fullName>Connects_Margin__c</fullName>
    <label>Connects Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>