force-app/main/default/objects/Placement__c/fields/Connects_Rate__c.field-meta.xml
<CustomField>
    <fullName>Connects_Rate__c</fullName>
    <label>Connects Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>