force-app/main/default/objects/Placement__c/fields/Connects_Review_Notes__c.field-meta.xml
<CustomField>
    <fullName>Connects_Review_Notes__c</fullName>
    <description>Notes from Connects data review in Jun &apos;16. Will be deleted once all open questions are resolved.</description>
    <label>Connects Review Notes</label>
    <type>TextArea</type>
</CustomField>