force-app/main/default/objects/Placement__c/fields/Connects_Total_Hours_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Connects_Total_Hours_Maximum__c</fullName>
    <label>Connects Total Hours, Maximum</label>
    <summarizedField>Connects_Worker_Time__c.Week_Beginning__c</summarizedField>
    <summaryForeignKey>Connects_Worker_Time__c.Send_Out_Employment__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>