force-app/main/default/objects/Placement__c/fields/Continued_from_Previous__c.field-meta.xml
<CustomField>
    <fullName>Continued_from_Previous__c</fullName>
    <formula>if (not (isblank (Previous__c)) &amp;&amp; ispickval (Previous__r.Employment_Continues_on_Next_Record__c, &quot;Yes&quot;), &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Continued from Previous</label>
    <type>Text</type>
</CustomField>