force-app/main/default/objects/Placement__c/fields/Coronavirus_Pandemic_Impact__c.field-meta.xml
<CustomField>
    <fullName>Coronavirus_Pandemic_Impact__c</fullName>
    <inlineHelpText>&apos;Coronavirus Pandemic Impact&apos; has temporarily been added for visibility into experience of those employed.

Laid Off: No longer on the company books. 

Furloughed: Expected to eventually return. Possibly receiving some benefits, hours, or pay.</inlineHelpText>
    <label>Coronavirus Pandemic Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Laid Off</fullName>
            </value>
            <value>
                <fullName>Furloughed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>