force-app/main/default/objects/Placement__c/fields/Count_of_Subsequent_Jobs_with_Same_Org__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Subsequent_Jobs_with_Same_Org__c</fullName>
    <description>Set by Rollup Helper.</description>
    <label>Count of Subsequent Jobs with Same Org</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>