force-app/main/default/objects/Placement__c/fields/Counted_as_Job_Only__c.field-meta.xml
<CustomField>
    <fullName>Counted_as_Job_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Counted as Job Only</label>
    <type>Checkbox</type>
</CustomField>