force-app/main/default/objects/Placement__c/fields/Created_from_Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Job_Order__c</fullName>
    <formula>if (not (isblank (Job_Order__c)), True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created from Job Order</label>
    <type>Checkbox</type>
</CustomField>