force-app/main/default/objects/Placement__c/fields/CRED_Salesforce_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>CRED_Salesforce_Contact_ID__c</fullName>
    <formula>Case_Record__r.CRED_Salesforce_Contact_ID__c</formula>
    <label>CRED Salesforce Contact ID</label>
    <type>Text</type>
</CustomField>