force-app/main/default/objects/Placement__c/fields/Date_of_First_Pay__c.field-meta.xml
<CustomField>
    <fullName>Date_of_First_Pay__c</fullName>
    <label>Date of First Pay</label>
    <type>Date</type>
</CustomField>