force-app/main/default/objects/Placement__c/fields/Date_Two_Weeks_Ago__c.field-meta.xml
<CustomField>
    <fullName>Date_Two_Weeks_Ago__c</fullName>
    <description>Referenced in Worker Time lookup filter criteria.</description>
    <formula>today() - 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Two Weeks Ago</label>
    <type>Date</type>
</CustomField>