force-app/main/default/objects/Placement__c/fields/Days_Between_Placements__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Placements__c</fullName>
    <formula>IF(NOT(ISBLANK(Previous__c)),Start_Date__c-Previous__r.End_Date__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Between Placements</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>