force-app/main/default/objects/Placement__c/fields/Days_Lapsed_During_Allocations_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Days_Lapsed_During_Allocations_Timeframe__c</fullName>
    <formula>if (Start_Date__c &lt; Case_Record__r.Program__r.Grant_Contract_Allocations_Start_Date__c 
&amp;&amp; End_Date__c &lt;= Case_Record__r.Program__r.Grant_Contract_Allocations_End_Date__c 
&amp;&amp; not(isblank(End_Date__c)), 
End_Date__c - Case_Record__r.Program__r.Grant_Contract_Allocations_Start_Date__c,

if (Start_Date__c &lt; Case_Record__r.Program__r.Grant_Contract_Allocations_Start_Date__c 
&amp;&amp; Case_Record__r.Inactive_Date__c &lt;= Case_Record__r.Program__r.Grant_Contract_Allocations_End_Date__c 
&amp;&amp; not(isblank(Case_Record__r.Inactive_Date__c)), 
Case_Record__r.Inactive_Date__c - Case_Record__r.Program__r.Grant_Contract_Allocations_Start_Date__c,

if (Start_Date__c &lt; Case_Record__r.Program__r.Grant_Contract_Allocations_Start_Date__c, 
Case_Record__r.Program__r.Grant_Contract_Allocations_End_Date__c - Case_Record__r.Program__r.Grant_Contract_Allocations_Start_Date__c, 

if (End_Date__c &lt;= Case_Record__r.Program__r.Grant_Contract_Allocations_End_Date__c 
&amp;&amp; not(isblank(End_Date__c)), 
End_Date__c - Start_Date__c,

if (Case_Record__r.Inactive_Date__c &lt;= Case_Record__r.Program__r.Grant_Contract_Allocations_End_Date__c 
&amp;&amp; not(isblank(Case_Record__r.Inactive_Date__c)), 
Case_Record__r.Inactive_Date__c - Start_Date__c,

Case_Record__r.Program__r.Grant_Contract_Allocations_End_Date__c - Start_Date__c)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Lapsed During Allocations Timeframe</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>