force-app/main/default/objects/Placement__c/fields/Days_Lapsed_Since_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Lapsed_Since_Start_Date__c</fullName>
    <description>Known days working, considering Program Status</description>
    <formula>if (isnull (Case_Record__r.Most_Recent_Employment_Start_Date__c), NULL, 

if (not (isnull (End_Date__c)),   End_Date__c - Case_Record__r.Most_Recent_Employment_Start_Date__c, 

if (ispickval (Retention_Exception__c, &quot;Opted Out of Retention Support&quot;), today() - Case_Record__r.Most_Recent_Employment_Start_Date__c,

if (not (isnull (Case_Record__r.Inactive_Date__c)), Case_Record__r.Inactive_Date__c - Case_Record__r.Most_Recent_Employment_Start_Date__c, 

today() - Case_Record__r.Most_Recent_Employment_Start_Date__c))))</formula>
    <inlineHelpText>Days lapsed from Start Date to End Date, otherwise Inactive Date, otherwise today&apos;s date.</inlineHelpText>
    <label>Days Lapsed Since Latest Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>