force-app/main/default/objects/Placement__c/fields/Days_Lapsed_SOE_to_Send_Out__c.field-meta.xml
<CustomField>
    <fullName>Days_Lapsed_SOE_to_Send_Out__c</fullName>
    <formula>if (isnull (Case_Record__r.Send_Out_Eligible_Date__c), NULL,
Send_Out_Date_or_Created_Date__c - Case_Record__r.Send_Out_Eligible_Date__c)</formula>
    <label>Days Lapsed SOE to Send Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>