force-app/main/default/objects/Placement__c/fields/Days_Until_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_End_Date__c</fullName>
    <formula>ETJ_Commitment_End_Date__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Until End Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>