force-app/main/default/objects/Placement__c/fields/Default_Lunch_Start__c.field-meta.xml
<CustomField>
    <fullName>Default_Lunch_Start__c</fullName>
    <label>Default Lunch Start</label>
    <length>8</length>
    <type>Text</type>
</CustomField>