force-app/main/default/objects/Placement__c/fields/Default_Time_In__c.field-meta.xml
<CustomField>
    <fullName>Default_Time_In__c</fullName>
    <label>Default Time In</label>
    <length>8</length>
    <type>Text</type>
</CustomField>