force-app/main/default/objects/Placement__c/fields/Earned_Cert_Used_for_Placement__c.field-meta.xml
<CustomField>
    <fullName>Earned_Cert_Used_for_Placement__c</fullName>
    <inlineHelpText>Was an earned certification used for this employment placement?</inlineHelpText>
    <label>Earned Cert Used for Placement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>