force-app/main/default/objects/Placement__c/fields/ECM_Previous_Retention_Placement_Types__c.field-meta.xml
<CustomField>
    <fullName>ECM_Previous_Retention_Placement_Types__c</fullName>
    <description>ECMv2.1 field used construct the sequence of retention Placements (Placements with an Agency Contract). This field depicts the sequence of placement types (ECM Sequence Name) up to and including this placement and all previous placements.</description>
    <formula>IF(NOT(ISBLANK(Previous__r.ECM_Retention_Placement_Sequence__c)), Previous__r.ECM_Retention_Placement_Sequence__c, &apos;&apos;)</formula>
    <label>ECM Previous Retention Placement Types</label>
    <type>Text</type>
</CustomField>