force-app/main/default/objects/Placement__c/fields/ECM_Sequence_Name__c.field-meta.xml
<CustomField>
    <fullName>ECM_Sequence_Name__c</fullName>
    <description>ECMv2.1 field used by ECM in the creating the Placement sequence. Best practice is to keep this field as short as possible and to not include semi-colons (&apos;;&apos;). In addition, the field should always be based in part off of Job_Type__c for compatibility with the ECM Placement trigger logic.
Original ECM field. Restore for unit test to pass: TEXT(Job_Type__c)</description>
    <formula>if (not(isblank (Start_Date__c)), TEXT(Job_Type__c), NULL)</formula>
    <label>ECM Sequence Name</label>
    <type>Text</type>
</CustomField>