force-app/main/default/objects/Placement__c/fields/Emp_Source_Cara_Component_FY13_FY17__c.field-meta.xml
<CustomField>
    <fullName>Emp_Source_Cara_Component_FY13_FY17__c</fullName>
    <description>Used throughout FY13-FY17 Strategic Plan. Discontinued for use in FY18.</description>
    <formula>if (ispickval(Job_Type__c, &quot;Permanent-Advancement&quot;), &quot;Advancement&quot;, 

if (Organization_TCP__r.Name = &quot;Cleanslate Chicago&quot;, &quot;Cleanslate&quot;,

if (ispickval (Student_Source__c, &quot;Cleanslate Direct&quot;) &amp;&amp; not(ispickval(Employment_Source__c, &quot;Cara Connects&quot;)), &quot;Cleanslate&quot;,

text(Employment_Source__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Method for attributing Cara jobs to the programmatic or enterprise component that sourced the job. Discontinued for use in FY18.</inlineHelpText>
    <label>Emp Source / Cara Component, FY13-FY17</label>
    <type>Text</type>
</CustomField>