force-app/main/default/objects/Placement__c/fields/Employment_Continues_on_Next_Formula__c.field-meta.xml
<CustomField>
    <fullName>Employment_Continues_on_Next_Formula__c</fullName>
    <formula>if (ispickval (Employment_Continues_on_Next_Record__c, &quot;Yes&quot;), TRUE, FALSE)</formula>
    <label>Employment Continues on Next (Formula)</label>
    <type>Checkbox</type>
</CustomField>