force-app/main/default/objects/Placement__c/fields/Employment_Continues_on_Next_Record__c.field-meta.xml
<CustomField>
    <fullName>Employment_Continues_on_Next_Record__c</fullName>
    <inlineHelpText>Pick &quot;Yes&quot; if the student is continuing employment with the same company and if a new record will be created to capture the information.</inlineHelpText>
    <label>Employment Continues on Next Record</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>End_Details__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>