force-app/main/default/objects/Placement__c/fields/Employment_Source__c.field-meta.xml
<CustomField>
    <fullName>Employment_Source__c</fullName>
    <description>&quot;TCP Staffing&quot; changed to &quot;Cara Connects&quot; on 1/17/17.</description>
    <inlineHelpText>This field impacts the cleanslate app</inlineHelpText>
    <label>Employment Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Job_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Self-Secured</fullName>
            </value>
            <value>
                <fullName>Cara Connects</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>