force-app/main/default/objects/Placement__c/fields/Employment_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Employment_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Send_Outs_Employment1</relationshipName>
    <type>Lookup</type>
</CustomField>