force-app/main/default/objects/Placement__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>ECMv1 Job Placement Service Domain</description>
    <inlineHelpText>This field used in milestone and retention calculations. Placement Start Date and End Dates cannot overlap for a Case Record.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>