force-app/main/default/objects/Placement__c/fields/End_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Blank__c</fullName>
    <formula>ISBLANK( End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Blank</label>
    <type>Checkbox</type>
</CustomField>