force-app/main/default/objects/Placement__c/fields/End_Date_Falls_in_FY__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Falls_in_FY__c</fullName>
    <formula>if (isblank (End_Date__c), &quot;N/A&quot;,

if (End_Date__c &lt; date(2012,1,1), &quot;CY&quot; &amp; right (text (year (End_Date__c)), 2), 

if (month (End_Date__c) &lt; 7, &quot;FY&quot;&amp; right (text (year (End_Date__c)), 2), 

&quot;FY&quot;&amp; right (text (year (End_Date__c)+1), 2) )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Falls in FY</label>
    <type>Text</type>
</CustomField>