force-app/main/default/objects/Placement__c/fields/End_Date_of_Latest_Subsequent_Job__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Latest_Subsequent_Job__c</fullName>
    <description>Set by Rollup Helper.</description>
    <label>End Date of Latest Subsequent Job</label>
    <type>Date</type>
</CustomField>