force-app/main/default/objects/Placement__c/fields/End_Details__c.field-meta.xml
<CustomField>
    <fullName>End_Details__c</fullName>
    <label>End Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>End_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Absenteeism/Tardiness</fullName>
            </value>
            <value>
                <fullName>Company Actions Questionable</fullName>
            </value>
            <value>
                <fullName>Company Closed</fullName>
            </value>
            <value>
                <fullName>Company Error</fullName>
            </value>
            <value>
                <fullName>Company Reducing Workforce/Lack of Hours</fullName>
            </value>
            <value>
                <fullName>Completed Initial Terms of Employment</fullName>
            </value>
            <value>
                <fullName>Daycare Issues</fullName>
            </value>
            <value>
                <fullName>Did Not Like</fullName>
            </value>
            <value>
                <fullName>Dismissed from Cara</fullName>
            </value>
            <value>
                <fullName>Incapable of Performing Duties</fullName>
            </value>
            <value>
                <fullName>Lack of Hours</fullName>
            </value>
            <value>
                <fullName>Mental Health</fullName>
            </value>
            <value>
                <fullName>Misconduct</fullName>
            </value>
            <value>
                <fullName>Negative Performance</fullName>
            </value>
            <value>
                <fullName>New Job with New Company</fullName>
            </value>
            <value>
                <fullName>New Position-Lateral Move</fullName>
            </value>
            <value>
                <fullName>New Position-Promoted</fullName>
            </value>
            <value>
                <fullName>Personal Issues</fullName>
            </value>
            <value>
                <fullName>Physical Health</fullName>
            </value>
            <value>
                <fullName>Poor Attitude</fullName>
            </value>
            <value>
                <fullName>Relapse</fullName>
            </value>
            <value>
                <fullName>Same Position-Change in Status</fullName>
            </value>
            <value>
                <fullName>Theft</fullName>
            </value>
            <value>
                <fullName>Other/Unknown</fullName>
            </value>
            <value>
                <fullName>Obtained Better Employment</fullName>
            </value>
            <value>
                <fullName>Lost Employment (At No Fault of Employee)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>