force-app/main/default/objects/Placement__c/fields/End_Type__c.field-meta.xml
<CustomField>
    <fullName>End_Type__c</fullName>
    <label>End Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Job Ended</fullName>
            </value>
            <value>
                <fullName>Laid Off</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>Move within Company</fullName>
            </value>
            <value>
                <fullName>Quit/Resigned</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Qualifying Retention Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>