force-app/main/default/objects/Placement__c/fields/Entered_into_ETO__c.field-meta.xml
<CustomField>
    <fullName>Entered_into_ETO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entered into ETO</label>
    <type>Checkbox</type>
</CustomField>