force-app/main/default/objects/Placement__c/fields/ETJ_Commitment_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETJ_Commitment_End_Date__c</fullName>
    <inlineHelpText>Date until which the participant has commitment to stay in the position, typically determined by the employer and applying to short-term jobs.</inlineHelpText>
    <label>Commitment End Date</label>
    <type>Date</type>
</CustomField>